SQS連携機能を実装

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=transaction-recorder
 aws.sqs.queueUrl=https://sqs.ap-northeast-1.amazonaws.com/321613638697/websystem-dev-sqs
 aws.region=ap-northeast-1
+server.servlet.context-path=/transaction-recorder
