--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
     destination: /opt/tomcat/webapps/
 hooks:
   BeforeInstall:
-    - location: scripts/stop_tomcat.sh
+    - location: /scripts/stop_tomcat.sh
       timeout: 300
-      runas: tomcat
+      runas: root
   AfterInstall:
-    - location: scripts/start_tomcat.sh
+    - location: /scripts/start_tomcat.sh
       timeout: 300
-      runas: tomcat
+      runas: root
